﻿zg 10.07.2014 03:05:00 +0200 - build 3988

1. уточнение 3981: не работал ключ /v.

2. уточнение 3986: падение при выходе.

drkns 09.07.2014 22:10:05 +0200 - build 3987

1. Рефакторинг.

zg 09.07.2014 21:38:08 +0200 - build 3986

1. редкое падение при переоткрытии файла в редакторе.

2. зависание при последовательном открытии/закрытии редактора через апи.

3. уточнение 3981.

zg 09.07.2014 15:36:33 +0200 - build 3985

1. с форума "ACTL_GETWINDOWTYPE и ACTL_GETWINDOWINFO не работают, будучи вызваны из EE_CLOSE/VE_CLOSE".

zg 09.07.2014 12:47:11 +0200 - build 3984

1. уточнение 3981: иногда при закрытии одних окон активировались не те окна, которые ожидались.

drkns 09.07.2014 00:54:24 +0200 - build 3983

1. Рефакторинг.

zg 08.07.2014 21:06:45 +0200 - build 3982

1. уточнение 3981.

zg 08.07.2014 13:53:39 +0200 - build 3981

1. рефакторинг оконного менеджера. теперь есть общая очередь сообщений.
   используя очередь сообщений теперь можно выполнять любой код асинхронно.
   пример - в реализации EE_READ.

svs 07.07.2014 13:58:08 +0400 - build 3980

1. EMenu всегда вызывался с OPEN_LEFTDISKMENU

drkns 06.07.2014 15:24:29 +0200 - build 3979

1. Рефакторинг.

drkns 04.07.2014 22:46:04 +0200 - build 3978

1. Внутренний конвертер utf8 -> utf16 некорректно преобразовывал 4-байтные символы.

drkns 03.07.2014 19:16:23 +0200 - build 3977

1. Уточнение 3869.

drkns 03.07.2014 00:19:44 +0200 - build 3976

1. Во внешний DialogBuilder добавлена поддержка комбинированных списков.

drkns 02.07.2014 23:55:43 +0200 - build 3975

1. Интерфейс класса Thread немного приближен к стандартному: теперь туда можно пихать что угодно, а не только uint(void*).

drkns 01.07.2014 19:49:09 +0200 - build 3974

1. Продолжение 3970, ещё пара мелочей.

drkns 01.07.2014 15:43:01 +0200 - build 3973

1. Продолжение 3970. Инициализируем импорты не сразу, а когда надо.

drkns 01.07.2014 12:29:19 +0200 - build 3972

1. Продолжение 3970.

drkns 01.07.2014 00:43:59 +0200 - build 3971
