@@ -1,4 +1,9 @@
-﻿zg 10.07.2014 03:05:00 +0200 - build 3988
+﻿drkns 10.07.2014 09:14:35 +0200 - build 3989
+
+1. Древний баг, но начал проявляться только при недавних падениях при выходе:
+   - нельзя закрывать хендлы, которые кто-то ещё ждёт по WaitForMultipleObjects.
+
+zg 10.07.2014 03:05:00 +0200 - build 3988
 
 1. уточнение 3981: не работал ключ /v.
 
